syntax = "proto3";
package addresses.v1;

option go_package = "github.com/peggyjv/sommelier/v7/x/addresses/types/v1";

import "addresses/v1/addresses.proto";

message GenesisState {
    repeated AddressMapping address_mappings = 1;
}

